- (Check-in) Display issues on mobile devices in core themes.

--- a/RockWeb/Styles/_checkin-core.less
+++ b/RockWeb/Styles/_checkin-core.less
@@ -650,9 +650,27 @@ input.namesearch {
 .qr-code-container {
   width: 60vw;
   max-width: 75%;
-  margin: 0 auto;
-  overflow: hidden;
-  border-radius: @border-radius-large;
+  margin: 0 auto 32px;
+  position: relative;
+    display: block;
+    width: 100%;
+    padding: 0;
+    overflow: hidden;
+    border-radius: @border-radius-large;
+
+    &:before {
+      display: block;
+    content: "";
+      padding-top: 100%;
+    }
+
+  .qr-code {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 
